compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__import_of_private_type_in_the_same_package.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport wibble.{type Wibble}\n"
---
----- SOURCE CODE
-- wibble.gleam

type Wibble {
  Wibble
}


-- main.gleam

import wibble.{type Wibble}


----- ERROR
error: Use of private type
  ┌─ /src/one/two.gleam:2:16
  │
2 │ import wibble.{type Wibble}
  │                ^^^^^^^^^^^

`wibble` does define `Wibble`, but it is private and cannot be accessed by
other modules.
