compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__import_of_private_value_in_the_same_package.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport wibble.{wobble}\n"
---
----- SOURCE CODE
-- wibble.gleam
const wobble = 0

-- main.gleam

import wibble.{wobble}


----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:2:16
  │
2 │ import wibble.{wobble}
  │                ^^^^^^

`wibble` does define `wobble`, but it is private and cannot be accessed by
other modules.
