compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__int_gt_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: 1 > 1.0
---
----- SOURCE CODE
1 > 1.0

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ 1 > 1.0
  │     ^^^

The > operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: The >. operator can be used with Floats
