compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__int_operator_on_floats_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: 1.1 > 2.0
---
----- SOURCE CODE
1.1 > 2.0

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ 1.1 > 2.0
  │     ^ Use >. instead

The > operator can only be used on Ints.
To compare two Floats you can use the >. operator.
