compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__int_operator_on_floats_in_guard_mult.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 3.0 { x if x * 2.0 == 6.0 -> \"a\" _ -> \"b\" }"
---
----- SOURCE CODE
case 3.0 { x if x * 2.0 == 6.0 -> "a" _ -> "b" }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:17
  │
1 │ case 3.0 { x if x * 2.0 == 6.0 -> "a" _ -> "b" }
  │                 ^^^^^^^ Use *. instead

The * operator can only be used on Ints.
